src/test/ui/generic-associated-types/impl_bounds.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/impl_bounds.rs:16:5
   |
LL |     type A<'a> where Self: 'static = (&'a ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...
   = note: ...so that the type `Fooy<T>` will meet its required lifetime bounds

error[E0478]: lifetime bound not satisfied
  --> $DIR/impl_bounds.rs:18:5
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'b` as defined on the associated item at 18:16
  --> $DIR/impl_bounds.rs:18:16
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |                ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined on the associated item at 18:12
  --> $DIR/impl_bounds.rs:18:12
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |            ^^

error[E0478]: lifetime bound not satisfied
  --> $DIR/impl_bounds.rs:18:5
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined on the associated item at 18:12
  --> $DIR/impl_bounds.rs:18:12
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |            ^^
note: but lifetime parameter must outlive the lifetime `'b` as defined on the associated item at 18:16
  --> $DIR/impl_bounds.rs:18:16
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |                ^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:21:5
   |
LL |     type C where Self: Copy = String;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
   = note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
note: the requirement `Fooy<T>: Copy` appears on the associated impl type `C` but not on the corresponding associated trait type
  --> $DIR/impl_bounds.rs:8:5
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     type C where Self: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ this trait associated type doesn't have the requirement `Fooy<T>: Copy`
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:23:5
   |
LL |     fn d() where Self: Copy {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
   = note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
note: the requirement `Fooy<T>: Copy` appears on the impl method `d` but not on the corresponding trait method
  --> $DIR/impl_bounds.rs:9:8
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     fn d() where Self: Clone;
   |        ^ this trait method doesn't have the requirement `Fooy<T>: Copy`
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       ^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0310, E0478.
For more information about an error, try `rustc --explain E0277`.
